--- a/gym-tracker/tsconfig.json
+++ b/gym-tracker/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
+    "resolveJsonModule": false,
     "strict": true,
     "paths": {
       "@/*": [
