--- a/gym-tracker/package.json
+++ b/gym-tracker/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.10",
+    "expo-checkbox": "~5.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -33,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-paper": "^5.14.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
