Resolve type errors that appeared after fixing ts bundler

--- a/gym-tracker/tsconfig.json
+++ b/gym-tracker/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "moduleResolution": "Bundler",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": false,
     "strict": true,
     "paths": {
