--- a/gym-tracker/package.json
+++ b/gym-tracker/package.json
@@ -33,9 +33,9 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
     "jwt-decode": "^4.0.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "^0.81.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-picker-select": "^9.3.1",
